[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falcon-perception"
version = "1.0.0"
description = "Falcon Perception: dense vision-language model for object detection and instance segmentation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Technology Innovation Institute"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "einops>=0.8.1",
  "numpy",
  "pillow",
  "tokenizers>=0.21.0",
  "pycocotools>=2.0.11",
  "scipy>=1.15.3",
  "safetensors>=0.7.0",
  "huggingface_hub",
]
